tests/ui/internal-attr-is-forbidden.stderr
error: remove bitsize_internal
 --> tests/ui/internal-attr-is-forbidden.rs:8:1
  |
8 | #[bitsize_internal]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: attribute bitsize_internal can only be applied internally by the bitsize macros

error: remove bitsize_internal
  --> tests/ui/internal-attr-is-forbidden.rs:12:1
   |
12 | #[bitsize_internal]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: attribute bitsize_internal can only be applied internally by the bitsize macros

error: expected derive macro, found derive helper attribute `bitsize_internal`
  --> tests/ui/internal-attr-is-forbidden.rs:19:20
   |
19 | #[derive(FromBits, bitsize_internal)]
   |                    ^^^^^^^^^^^^^^^^ not a derive macro
